--- a/app/assets/stylesheets/workarea/storefront/reviews/components/_reviews.scss
+++ b/app/assets/stylesheets/workarea/storefront/reviews/components/_reviews.scss
@@ -77,7 +77,7 @@ $reviews-review-border:  2px solid $border-color !default;
                     margin: 0 0 0 $spacing-unit;
                     padding-left: $spacing-unit;
                     float: left;
-                    font-weight: $font-weight-heavy;
+                    font-size: $reviews-meta-font-size;
                     line-height: 1;
                 }
 
